--- a/Bookstore/src/main/resources/templates/booklist.html
+++ b/Bookstore/src/main/resources/templates/booklist.html
@@ -3,6 +3,7 @@
 <head>
     <title>Bookstore</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+     <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" th:href="@{css/bootstrap.min.css}" />
     
 <style>
 </style>   
@@ -10,19 +11,12 @@
 <body>
 	<h1>Books</h1>
 	
-	
-	<!-- 	private String isbn; //ajaa saman asian kuin Id(?)
-	private String title;
-	private String author;
-	private int year;
-	private double price; -->
-	
-	
-	<table>
+	<table class="table table-striped">
 		<tr>
 			<th> Title </th>
 			<th> Author </th>
 			<th> Year </th>
+			<th> Category </th>
 			<th> ISBN </th>
 			<th> Price </th>
 		</tr>
@@ -31,13 +25,15 @@
 			<td th:text="${book.title}">title</td>
 			<td th:text="${book.author}">author</td>
 			<td th:text="${book.year}">year</td>
+			<td th:text="${book.category.name}">category</td>
 			<td th:text="${book.isbn}">isbn</td>
 			<td th:text="${book.price}">price</td>
-		
+			<td> <a class="btn btn-danger" th:href="@{/deletebook/{isbn}(isbn=${book.isbn})}">Delete</a></td>
+			<td> <a th:href="@{/editbook/{isbn}(isbn=${book.isbn})}">Edit</a></td>
 		</tr>
 	
 	</table>
-	
+	<a class="btn btn-success" href="/savebook">New Book</a>
     
 </body>
 </html>
