--- a/Bookstore/src/main/resources/templates/booklist.html
+++ b/Bookstore/src/main/resources/templates/booklist.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <title>Bookstore</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -10,7 +10,9 @@
 </head>
 <body>
 	<h1>Books</h1>
-	<a href="/resthome">REST-homepage</a>
+	<div class="col-md-4">
+		<h3 th:inline="text">Welcome [[${#httpServletRequest.remoteUser}]]!</h3>
+	</div>
 	
 	<table class="table table-striped">
 		<tr>
@@ -20,6 +22,7 @@
 			<th> Category </th>
 			<th> ISBN </th>
 			<th> Price </th>
+			<th sec:authorize="hasRole('ADMIN')"> </th>
 		</tr>
 		<tr th:each="book : ${books}">
 			<td th:text="${book.title}">title</td>
@@ -28,11 +31,16 @@
 			<td th:text="${book.category.name}">category</td>
 			<td th:text="${book.isbn}">isbn</td>
 			<td th:text="${book.price}">price</td>
-			<td> <a class="btn btn-danger" th:href="@{/deletebook/{isbn}(isbn=${book.isbn})}">Delete</a></td>
-			<td> <a th:href="@{/savebook/{isbn}(isbn=${book.isbn})}">Edit</a></td>
+			<td sec:authorize="hasRole('ADMIN')"> <a class="btn btn-danger" th:href="@{/deletebook/{isbn}(isbn=${book.isbn})}">Delete</a></td>
+			<td sec:authorize="hasRole('ADMIN')"> <a th:href="@{/savebook/{isbn}(isbn=${book.isbn})}">Edit</a></td>
 		</tr>
 	</table>
 	<a class="btn btn-success" href="/savebook">New Book</a>
+	<div class="col-md-4" style="padding:20px 0">
+		<form th:action="@{/logout}" method="post">
+			<input type="submit" value="Sign Out" class="btn btn-danger"/>
+		</form>
+	</div>
     
 </body>
 </html>
