--- a/Bookstore/src/main/resources/templates/resthomepage.html
+++ b/Bookstore/src/main/resources/templates/resthomepage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="www.thymeleaf.com">
+<html xmlns:th="www.thymeleaf.com" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 	<meta charset="utf-8" />
 	<title>REST Home Page</title>
