--- a/Bookstore/src/main/resources/templates/welcome.html
+++ b/Bookstore/src/main/resources/templates/welcome.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <title>Bookstore</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<h1>Welcome!</h1>
-		<a class="btn btn-success" href="/books">Books</a>
+		<a class="btn btn-success" href="/booklist">Books</a>
 	
     
 </body>
