--- a/Bookstore/src/main/resources/templates/booklist.html
+++ b/Bookstore/src/main/resources/templates/booklist.html
@@ -31,11 +31,11 @@
 			<td th:text="${book.category.name}">category</td>
 			<td th:text="${book.isbn}">isbn</td>
 			<td th:text="${book.price}">price</td>
-			<td sec:authorize="hasRole('ADMIN')"> <a class="btn btn-danger" th:href="@{/deletebook/{isbn}(isbn=${book.isbn})}">Delete</a></td>
-			<td sec:authorize="hasRole('ADMIN')"> <a th:href="@{/savebook/{isbn}(isbn=${book.isbn})}">Edit</a></td>
+			<td sec:authorize="hasAuthority('ADMIN')"> <a class="btn btn-danger" th:href="@{/deletebook/{isbn}(isbn=${book.isbn})}">Delete</a></td>
+			<td sec:authorize="hasAuthority('ADMIN')"> <a th:href="@{/savebook/{isbn}(isbn=${book.isbn})}">Edit</a></td>
 		</tr>
 	</table>
-	<a class="btn btn-success" href="/savebook">New Book</a>
+	<a sec:authorize="hasAuthority('ADMIN')" class="btn btn-success" href="/savebook">New Book</a>
 	<div class="col-md-4" style="padding:20px 0">
 		<form th:action="@{/logout}" method="post">
 			<input type="submit" value="Sign Out" class="btn btn-danger"/>
